force-app/main/default/objects/Lead/fields/Ca__c.field-meta.xml
<CustomField>
    <fullName>Ca__c</fullName>
    <label>Capacidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>