force-app/main/default/objects/Lead/fields/cuenta_asociada__c.field-meta.xml
<CustomField>
    <fullName>cuenta_asociada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>cuenta asociada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>