force-app/main/default/objects/Lead/fields/Precio_maximo__c.field-meta.xml
<CustomField>
    <fullName>Precio_maximo__c</fullName>
    <label>Precio maximo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>