force-app/main/default/objects/Lead/fields/Precio_minimo__c.field-meta.xml
<CustomField>
    <fullName>Precio_minimo__c</fullName>
    <label>Precio minimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>